--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ black = "^21.9b0"
 isort = "^5.9.3"
 pylint = "^2.11.1"
 mypy = "^0.910"
+flake8 = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
