--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,15 +9,14 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.8,<4.0"
-jupyter = "^1.0.0"
-pandas = "^1.3.3"
+pandas = "^1.5.2"
 gazpacho = "^1.1"
-typer = "^0.4.0"
-fastapi = "^0.70.0"
-uvicorn = { version = "^0.15.0", extras = ["standard"] }
-requests = "^2.26.0"
-sqlmodel = "^0.0.4"
-python-dotenv = "^0.19.1"
+typer = "^0.7.0"
+fastapi = "^0.88.0"
+uvicorn = "^0.20.0"
+requests = "^2.28.1"
+sqlmodel = "^0.0.8"
+python-dotenv = "^0.21.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
@@ -25,6 +24,7 @@ isort = "^5.9.3"
 pylint = "^2.11.1"
 mypy = "^0.910"
 flake8 = "^4.0.1"
+jupyter = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
