--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ uvicorn = "^0.20.0"
 requests = "^2.28.1"
 sqlmodel = "^0.0.8"
 python-dotenv = "^0.21.0"
+ics = "^0.7.2"
+certifi = "^2025.11.12"
 
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
